# queryparser

./: stack.yaml
demo/src/: Demo.hs
querysplainer/: README.md  querysplainer.cabal  stack.yaml
querysplainer/src/: API.hs  Main.hs
